// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs correctly applies the theme context className 1`] = `
<ThemeContextProvider
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <Tabs
    fill={false}
    tabFill={false}
    variant="modular-left-aligned"
  >
    <CommonTabs
      activeItemKey="default"
      onRequestActivate={[Function]}
      variant="modular-left-aligned"
    >
      <div
        className="workspace"
        role="none"
      >
        <div
          aria-hidden={true}
          className="body-shadow-container"
        >
          <div
            className="body-shadow"
          />
        </div>
        <div
          className="tab-header"
          role="none"
        >
          <Tabs
            tabData={
              Array [
                Object {
                  "associatedPanelId": "terra-common-tabs-default-panel",
                  "customDisplay": undefined,
                  "icon": undefined,
                  "id": "terra-common-tabs-default",
                  "isDisabled": false,
                  "isIconOnly": false,
                  "isSelected": true,
                  "itemKey": "default",
                  "label": "Default",
                  "metaData": undefined,
                  "onSelect": [Function],
                  "showIcon": false,
                },
              ]
            }
            variant="modular-left-aligned"
          >
            <div
              aria-orientation="horizontal"
              aria-owns=""
              className="tab-container orion-fusion-theme"
              data-tab-is-calculating="true"
              role="tablist"
            >
              <Tab
                associatedPanelId="terra-common-tabs-default-panel"
                hiddenStartIndex={1}
                id="terra-common-tabs-default"
                index={0}
                isDisabled={false}
                isIconOnly={false}
                isSelected={true}
                itemKey="default"
                key="terra-common-tabs-default"
                label="Default"
                onSelect={[Function]}
                setDropdownOpen={[Function]}
                showIcon={false}
                tabIds={
                  Array [
                    "terra-common-tabs-default",
                  ]
                }
                variant="modular-left-aligned"
                zIndex={1}
              >
                <div
                  aria-controls="terra-common-tabs-default-panel"
                  aria-disabled={false}
                  aria-selected={true}
                  className="tab is-active is-text-only orion-fusion-theme"
                  data-focus-styles-enabled={true}
                  data-terra-tabs-show-focus-styles={true}
                  id="terra-common-tabs-default"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  role="tab"
                  style={
                    Object {
                      "zIndex": 1,
                    }
                  }
                  tabIndex={0}
                  title="Default"
                >
                  <div
                    className="inner"
                  >
                    <span
                      className="label"
                    >
                      Default
                    </span>
                  </div>
                </div>
              </Tab>
              <OnClickOutside(TabDropDown)
                eventTypes={
                  Array [
                    "mousedown",
                    "touchstart",
                  ]
                }
                excludeScrollbar={false}
                isOpen={false}
                onBlur={[Function]}
                onFocus={[Function]}
                onRequestClose={[Function]}
                outsideClickIgnoreClass="ignore-react-onclickoutside"
                preventDefault={false}
                refCallback={[Function]}
                stopPropagation={false}
              >
                <TabDropDown
                  disableOnClickOutside={[Function]}
                  enableOnClickOutside={[Function]}
                  eventTypes={
                    Array [
                      "mousedown",
                      "touchstart",
                    ]
                  }
                  isOpen={false}
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onRequestClose={[Function]}
                  outsideClickIgnoreClass="ignore-react-onclickoutside"
                  preventDefault={false}
                  refCallback={[Function]}
                  stopPropagation={false}
                  wrappedRef={[Function]}
                >
                  <div
                    className="drop-down orion-fusion-theme"
                    onMouseDown={[Function]}
                    role="none"
                  />
                </TabDropDown>
              </OnClickOutside(TabDropDown)>
            </div>
          </Tabs>
        </div>
        <div
          className="body"
          role="none"
        >
          <CommonTabItem
            associatedPanelId="terra-common-tabs-default-panel"
            id="terra-common-tabs-default"
            isActive={true}
            isDisabled={false}
            isIconOnly={false}
            itemKey="default"
            key="default/.0"
            label="Default"
            portalElement={
              <div
                role="none"
                style="position: relative; height: 100%; width: 100%;"
              >
                <div
                  class="panel orion-fusion-theme"
                  role="none"
                >
                  <div
                    class="panel-header"
                    data-testid="workspace-content-heading"
                    role="none"
                  />
                  <div
                    class="panel-content"
                    role="none"
                  >
                    <div
                      aria-labelledby="terra-common-tabs-default"
                      class="panel-overflow"
                      data-application-overflow-container="true"
                      id="terra-common-tabs-default-panel"
                      role="tabpanel"
                      tabindex="0"
                    >
                      <div
                        class="outer-container"
                        data-testid="dynamic-overlay-container"
                        tabindex="-1"
                      >
                        <div
                          class="content-container"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            }
            render={[Function]}
            showIcon={false}
            variant="modular-left-aligned"
          >
            <Portal
              containerInfo={
                <div
                  role="none"
                  style="position: relative; height: 100%; width: 100%;"
                >
                  <div
                    class="panel orion-fusion-theme"
                    role="none"
                  >
                    <div
                      class="panel-header"
                      data-testid="workspace-content-heading"
                      role="none"
                    />
                    <div
                      class="panel-content"
                      role="none"
                    >
                      <div
                        aria-labelledby="terra-common-tabs-default"
                        class="panel-overflow"
                        data-application-overflow-container="true"
                        id="terra-common-tabs-default-panel"
                        role="tabpanel"
                        tabindex="0"
                      >
                        <div
                          class="outer-container"
                          data-testid="dynamic-overlay-container"
                          tabindex="-1"
                        >
                          <div
                            class="content-container"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              }
            >
              <CommonTabContent>
                <div
                  className="panel orion-fusion-theme"
                  role="none"
                >
                  <div
                    className="panel-header"
                    data-testid="workspace-content-heading"
                    role="none"
                  />
                  <div
                    className="panel-content"
                    role="none"
                  >
                    <div
                      aria-labelledby="terra-common-tabs-default"
                      className="panel-overflow"
                      data-application-overflow-container={true}
                      id="terra-common-tabs-default-panel"
                      role="tabpanel"
                      tabIndex="0"
                    >
                      <DynamicOverlayContainer
                        overlays={Array []}
                      >
                        <div
                          className="outer-container"
                          data-testid="dynamic-overlay-container"
                          tabIndex="-1"
                        >
                          <div
                            className="content-container"
                          />
                        </div>
                      </DynamicOverlayContainer>
                    </div>
                  </div>
                </div>
              </CommonTabContent>
            </Portal>
          </CommonTabItem>
        </div>
      </div>
    </CommonTabs>
  </Tabs>
</ThemeContextProvider>
`;

exports[`Tabs should render a controlled component when onChange and activeKey are set 1`] = `
<div
  className="structural"
  role="none"
>
  <div
    aria-hidden={true}
    className="body-shadow-container"
  >
    <div
      className="body-shadow"
    />
  </div>
  <div
    className="tab-header"
    role="none"
  >
    <Tabs
      onChange={[Function]}
      tabData={
        Array [
          Object {
            "associatedPanelId": "terra-common-tabs-default-panel",
            "customDisplay": undefined,
            "icon": undefined,
            "id": "terra-common-tabs-default",
            "isDisabled": false,
            "isIconOnly": false,
            "isSelected": true,
            "itemKey": "default",
            "label": "Default",
            "metaData": undefined,
            "onSelect": [Function],
            "showIcon": false,
          },
        ]
      }
      variant="framework"
    />
  </div>
  <div
    className="body"
    role="none"
  >
    <CommonTabItem
      associatedPanelId="terra-common-tabs-default-panel"
      id="terra-common-tabs-default"
      isActive={true}
      isDisabled={false}
      isIconOnly={false}
      itemKey="default"
      key="default/.0"
      label="Default"
      portalElement={null}
      render={[Function]}
      showIcon={false}
      variant="framework"
    />
  </div>
</div>
`;

exports[`Tabs should render a default component 1`] = `
<div
  className="structural"
  role="none"
>
  <div
    aria-hidden={true}
    className="body-shadow-container"
  >
    <div
      className="body-shadow"
    />
  </div>
  <div
    className="tab-header"
    role="none"
  >
    <Tabs
      tabData={
        Array [
          Object {
            "associatedPanelId": "terra-common-tabs-default-panel",
            "customDisplay": undefined,
            "icon": undefined,
            "id": "terra-common-tabs-default",
            "isDisabled": false,
            "isIconOnly": false,
            "isSelected": true,
            "itemKey": "default",
            "label": "Default",
            "metaData": undefined,
            "onSelect": [Function],
            "showIcon": false,
          },
        ]
      }
      variant="framework"
    />
  </div>
  <div
    className="body"
    role="none"
  >
    <CommonTabItem
      associatedPanelId="terra-common-tabs-default-panel"
      id="terra-common-tabs-default"
      isActive={true}
      isDisabled={false}
      isIconOnly={false}
      itemKey="default"
      key="default/.0"
      label="Default"
      portalElement={null}
      render={[Function]}
      showIcon={false}
      variant="framework"
    />
  </div>
</div>
`;

exports[`Tabs should render an id based on the Tabs id and the Tab key 1`] = `
<div
  className="structural"
  role="none"
>
  <div
    aria-hidden={true}
    className="body-shadow-container"
  >
    <div
      className="body-shadow"
    />
  </div>
  <div
    className="tab-header"
    role="none"
  >
    <Tabs
      tabData={
        Array [
          Object {
            "associatedPanelId": "application-id-default-panel",
            "customDisplay": undefined,
            "icon": undefined,
            "id": "application-id-default",
            "isDisabled": false,
            "isIconOnly": false,
            "isSelected": true,
            "itemKey": "default",
            "label": "Default",
            "metaData": undefined,
            "onSelect": [Function],
            "showIcon": false,
          },
        ]
      }
      variant="framework"
    />
  </div>
  <div
    className="body"
    role="none"
  >
    <CommonTabItem
      associatedPanelId="application-id-default-panel"
      id="application-id-default"
      isActive={true}
      isDisabled={false}
      isIconOnly={false}
      itemKey="default"
      key="default/.0"
      label="Default"
      portalElement={null}
      render={[Function]}
      showIcon={false}
      variant="framework"
    />
  </div>
</div>
`;

exports[`Tabs should render an uncontrolled component when defaultActiveKey is set 1`] = `
<div
  className="structural"
  role="none"
>
  <div
    aria-hidden={true}
    className="body-shadow-container"
  >
    <div
      className="body-shadow"
    />
  </div>
  <div
    className="tab-header"
    role="none"
  >
    <Tabs
      tabData={
        Array [
          Object {
            "associatedPanelId": "terra-common-tabs-default-panel",
            "customDisplay": undefined,
            "icon": undefined,
            "id": "terra-common-tabs-default",
            "isDisabled": false,
            "isIconOnly": false,
            "isSelected": true,
            "itemKey": "default",
            "label": "Default",
            "metaData": undefined,
            "onSelect": [Function],
            "showIcon": false,
          },
        ]
      }
      variant="framework"
    />
  </div>
  <div
    className="body"
    role="none"
  >
    <CommonTabItem
      associatedPanelId="terra-common-tabs-default-panel"
      id="terra-common-tabs-default"
      isActive={true}
      isDisabled={false}
      isIconOnly={false}
      itemKey="default"
      key="default/.0"
      label="Default"
      portalElement={null}
      render={[Function]}
      showIcon={false}
      variant="framework"
    />
  </div>
</div>
`;

exports[`Tabs should render with content filled when indicated 1`] = `
<CommonTabs
  activeItemKey="default"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  onRequestActivate={[Function]}
  variant="framework"
>
  <CommonTabItem
    isDisabled={false}
    isIconOnly={false}
    itemKey="default"
    label="Default"
    render={[Function]}
    showIcon={false}
  />
</CommonTabs>
`;

exports[`Tabs should render with tabs filled when indicated 1`] = `
<CommonTabs
  activeItemKey="default"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  onRequestActivate={[Function]}
  variant="framework"
>
  <CommonTabItem
    isDisabled={false}
    isIconOnly={false}
    itemKey="default"
    label="Default"
    render={[Function]}
    showIcon={false}
  />
</CommonTabs>
`;

exports[`Tabs should set custom props 1`] = `
<CommonTabs
  activeItemKey="default"
  className="customClass"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  onRequestActivate={[Function]}
  variant="framework"
>
  <CommonTabItem
    isDisabled={false}
    isIconOnly={false}
    itemKey="default"
    label="Default"
    render={[Function]}
    showIcon={false}
  />
</CommonTabs>
`;

exports[`Tabs should set custom props for child Tab Pane 1`] = `
<div
  className="structural"
  role="none"
>
  <div
    aria-hidden={true}
    className="body-shadow-container"
  >
    <div
      className="body-shadow"
    />
  </div>
  <div
    className="tab-header"
    role="none"
  >
    <Tabs
      tabData={
        Array [
          Object {
            "associatedPanelId": "terra-common-tabs-default-panel",
            "customDisplay": undefined,
            "icon": undefined,
            "id": "terra-common-tabs-default",
            "isDisabled": false,
            "isIconOnly": false,
            "isSelected": true,
            "itemKey": "default",
            "label": "Default",
            "metaData": undefined,
            "onSelect": [Function],
            "showIcon": false,
          },
        ]
      }
      variant="framework"
    />
  </div>
  <div
    className="body"
    role="none"
  >
    <CommonTabItem
      associatedPanelId="terra-common-tabs-default-panel"
      id="terra-common-tabs-default"
      isActive={true}
      isDisabled={false}
      isIconOnly={false}
      itemKey="default"
      key="default/.0"
      label="Default"
      portalElement={null}
      render={[Function]}
      showIcon={false}
      variant="framework"
    />
  </div>
</div>
`;
